--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,9 +8,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="icon" type="image/svg+xml" href="/favicon.jpg" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,400italic,500,700,100" 
     rel="stylesheet">
-    <title>React App</title>
+    <title>TAM PRODUCTION</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
